data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_678.wast
;; 9. **Test Description 9**:    - **Test**: Loop with multiple `br_if` instructions executed sequentially, each depending on different logical evaluations.    - **Constraint**: Confirm that each `br_if` evaluates conditions independently and accurately.    - **Reason**: Complex, multi-branch scenarios may reveal implementation flaws.

(assert_invalid
  (module
    (func $test-multiple-br_if
      (local i32)
      (i32.const 1)
      (loop (result i32)
        (local.set 0)
        (br_if 0 (i32.eqz (local.get 0)))
        (i32.const 0)
        (br_if 0 (i32.eqz))
      )
    )
  )
  "type mismatch"
)